Use isBlank since we're on Java 16